assets folder added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="./logo.png" /></a>
+            <a href="index.html"><img src="./assets/logo.png" /></a>
             <div class="nav-links" id="navLinks">
                 <div class="icons1">
                     <i class="fa-sharp fa-solid fa-xmark" onclick = "hideMenu()"></i>
@@ -66,19 +66,19 @@
         <p>Chittagong University of Engineering & Technology, commonly referred to as CUET, is a public engineering university in Bangladesh located in Raozan Upazila under Chattogram District.</p>
         <div class="row">
             <div class="image-col">
-                <img src="./rsz_101.jpg">
+                <img src="./assets/rsz_101.jpg">
                 <div class="layer">
                     <h3>Sohid Minar</h3>
                 </div>
             </div>
             <div class="image-col">
-                <img src="./rsz_102.jpg">
+                <img src="./assets/rsz_102.jpg">
                 <div class="layer">
                     <h3>S.K IT Buisness Incubator</h3>
                 </div>
             </div>
             <div class="image-col">
-                <img src="./rsz_33.jpg">
+                <img src="./assets/rsz_33.jpg">
                 <div class="layer">
                     <h3>TSC</h3>
                 </div>
@@ -90,7 +90,7 @@
         <p>is a public engineering university in Bangladesh located in Raozan Upazila under</p>
         <div class="row">
             <div class="test-col">
-                <img src="./11.jpg" >
+                <img src="./assets/11.jpg" >
                 <div>
                     <p>The weak system intensified into a depression over the Bay of Bengal on November 10 and further intensified to a cyclonic storm on November 11, being named Gaja.</p>
                     <h3>Nahid Ferdous Priom</h3>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="test-col">
-                <img src="./12.jpg" >
+                <img src="./assets/12.jpg" >
                 <div>
                     <p>The weak system intensified into a depression over the Bay of Bengal on November 10 and further intensified to a cyclonic storm on November 11, being named Gaja.</p>
                     <h3>Mehedi Hasan Shakil</h3>
