--- a/index.html
+++ b/index.html
@@ -7,43 +7,42 @@
     <title>CUET</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <section class="header">
+    <!--Header Section-->
+    <section id="home" class="header">
         <nav>
-            <a href="index.html"><img src="./assets/logo.png" /></a>
+            <a href="#home"><img src="./assets/logo.png" /></a>
             <div class="nav-links" id="navLinks">
                 <div class="icons1">
-                    <i class="fa-sharp fa-solid fa-xmark" onclick = "hideMenu()"></i>
+                    <i class="fa-sharp fa-solid fa-xmark" onclick="hideMenu()"></i>
                 </div>
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">COURSE</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#home" onclick="scrollToSection('home')">HOME</a></li>
+                    <li><a href="#about" onclick="scrollToSection('about')">ABOUT</a></li>
+                    <li><a href="#course" onclick="scrollToSection('course')">COURSE</a></li>
+                    <li><a href="#contact" onclick="scrollToSection('contact')">CONTACT</a></li>
                 </ul>
             </div>
             
             <div class="icons2">
-                <i class="fa-solid fa-bars"onclick = "showMenu()"></i>
-
+                <i class="fa-solid fa-bars" onclick="showMenu()"></i>
             </div>
-            
         </nav>
 
         <div class="text-box">
             <h1>Green Heaven in Bangladesh</h1>
             <p>Chittagong University of Engineering & Technology, commonly referred to as CUET, is a public engineering university in Bangladesh located in Raozan Upazila under Chattogram District.</p>
-            <a href="" class="btn-1">Visit us to learn more</a>
+            <a href="#contact" class="btn-1">Visit us to learn more</a>
         </div>
     </section>
-
-    <section class="course">
+    <!--Course Section-->
+    <section id="course" class="course">
         <h1>Course We Offer</h1>
         <p>Coursera Inc. is a U.S.-based massive open online course provider founded in 2012 by Stanford</p>
         <div class="row">
@@ -61,7 +60,8 @@
             </div>
         </div>
     </section>
-    <section class="campus">
+    <!--Campus Section-->
+    <section id="about" class="campus">
         <h1>Our Global Campus</h1>
         <p>Chittagong University of Engineering & Technology, commonly referred to as CUET, is a public engineering university in Bangladesh located in Raozan Upazila under Chattogram District.</p>
         <div class="row">
@@ -85,8 +85,9 @@
             </div>
         </div>
     </section>
-    <section class="test-monials">
-        <h1>What Our Studens Says</h1>
+    <!--Testimonials Section-->
+    <section id="contact" class="test-monials">
+        <h1>What Our Students Say</h1>
         <p>is a public engineering university in Bangladesh located in Raozan Upazila under</p>
         <div class="row">
             <div class="test-col">
@@ -115,10 +116,12 @@
             </div>
         </div>
     </section>
+    <!--CTA Section-->
     <section class="cta">
         <h1>Enroll For Our Online Courses</h1>
         <a href="#" class="btn-1">Contact Us</a>
     </section>
+    <!--Footer Section-->
     <section class="footer">
         <h4>About Us</h4>
         <p>Chittagong University of Engineering & Technology, commonly referred to as CUET</p>
@@ -130,14 +133,28 @@
         </div>
         <p>Made by <i class="fa-solid fa-heart"></i> Nahid Ferdous Priom</p>
     </section>
-<script>
-    var navLinks = document.getElementById("navLinks");
-    function showMenu(){
-        navLinks.style.right = "0";
-    }
-    function hideMenu(){
-        navLinks.style.right = "-200px";
-    }
-</script>
+    <script>
+        var navLinks = document.getElementById("navLinks");
+
+        function showMenu() {
+            navLinks.style.right = "0";
+        }
+
+        function hideMenu() {
+            navLinks.style.right = "-200px";
+        }
+
+        function scrollToSection(sectionId) {
+            var targetSection = document.getElementById(sectionId);
+            var targetOffset = targetSection.offsetTop;
+            var headerHeight = document.querySelector(".header").offsetHeight;
+            var yOffset = targetOffset - headerHeight;
+
+            window.scrollTo({
+                top: yOffset,
+                behavior: 'smooth'
+            });
+        }
+    </script>
 </body>
 </html>
